# AutoResearch

./: README.md  main.py  pyproject.toml
output/: draft_v1.md  draft_v2.md  draft_v3.md  draft_v4.md  draft_v5.md  report_Mental_health_of_Men_20260626_170814.md
src/: edges.py  graph.py  nodes.py  schemas.py  state.py  tools.py
